
{{$NEXT}}

 - added SMTP fallback if STARTTLS fails

1.20130531 2013-05-30 America/Los_Angeles

 - added gzip support to HTTP server, compressed JS files
 - reason is internally an arrayref of hashrefs (was a single hashref)
 - documentation additions
 - removed unused JS files
 - add validation and fixup of SPF result for incoming reports
 - normalized domain columns in spf & dkim tables

1.20130528 2013-05-28 America/Los_Angeles

 - bump major version to 1
 - normalized domain columns in report_record
 - fixups to handle reports with invalid formatting
 - improved handling for IMAP SSL connections
 - made internal represention of Mail::DMARC::dkim & spf consistent
   with their aggregate report representation

0.20130528 2013-05-27 America/Los_Angeles

 - updated Send/SMTP to use report::aggregate
 - switched back to gzip reports (instead of zip)
 - dmarc_view_reports, added filtering ability, GeoIP location

0.20130524 2013-05-23 America/Los_Angeles

 - added bin/dmarc_httpd
 - added bin/dmarc_view_reports
 - renamed: dmarc_report -> dmarc_send_reports

0.20130521 2013-05-21 America/Los_Angeles

 - check for report_record existence before insertion
 - SQL: added report_record.count column
 - subclassed aggregreate reports into Report::Aggregate
   - consolidates two agg. rep. generation methods to one
 - SQL: added table report_error
 - updated SQLite schema with native column types

0.20130520 2013-05-19 America/Los_Angeles

 - added bin/dmarc_receive (via IMAP, mbox, or message file)
 - added report retrieval via IMAP
 - extract sender domain from subject or MIME metadata
 - SQL: added author.extra_contact
 - SQL: removed 'NOT NULL' requirements for values often missing from incoming
        reports.

0.20130517 2013-05-17 America/Los_Angeles

 - send reports with zip until 7/1, gzip after
 - replace Socket 2 with Socket6 (better Windows compatibility)
 - added parsing of incoming email reports
 - added author and domain tables