@@ -1,7 +1,9 @@
 
 {{$NEXT}}
 
- - added SMTP fallback if STARTTLS fails
+ - make sure a report record exists when fetching SMTP todo
+ - added insecure SMTP fallback if STARTTLS fails
+ - added color coded results to HTTP grid
 
 1.20130531 2013-05-30 America/Los_Angeles
 
